@@ -418,8 +418,11 @@ _set_rsvg_affine (cairo_t * cr, const double affine[6])
 {
     cairo_matrix_t matrix;
 
-    cairo_matrix_init (&matrix, affine[0], affine[1], affine[2], affine[3], affine[4], affine[5]);
-    cairo_transform (cr, &matrix);
+    cairo_matrix_init (&matrix,
+                       affine[0], affine[1],
+                       affine[2], affine[3],
+                       affine[4], affine[5]);
+    cairo_set_matrix (cr, &matrix);
 }
 
 PangoContext *
